# website-marketing-simulation

./: .gitignore  README.md  prof.out  pyproject.toml
src/config/: simulation.yaml
src/sim/app/: cli.py  runner.py
src/sim/core/: config.py  ids.py  logging.py  rng.py  types.py
src/sim/features/adstock_saturation/: __init__.py  service.py  transforms.py  types.py
src/sim/features/adstock_saturation/tests/: test_adstock.py  test_saturation.py
src/sim/features/arrivals/: service.py  types.py
src/sim/features/arrivals/models/: nhpp.py
src/sim/features/arrivals/tests/: test_arrivals_nhpp.py  test_arrivals_service_dispatch.py
src/sim/features/bootstrap/: service.py
src/sim/features/bootstrap/tests/: test_bootstrap_run_id.py
src/sim/features/campaign_planner/: __initi__.py  service.py
src/sim/features/campaign_planner/tests/: test_campaign_planner.py
src/sim/features/channels_exposure/: service.py  types.py
src/sim/features/channels_exposure/channels/: __init__.py  base.py  paid_display.py  paid_search.py
src/sim/features/channels_exposure/tests/: test_paid_display.py  (+2 more)
src/sim/features/conversion/: service.py
src/sim/features/events/: schema.py  service.py  types.py
src/sim/features/intent_resolver/: service.py  types.py
src/sim/features/persistence/: duckdb_adapter.py  schema.py  service.py
src/sim/features/run_explorer/: service.py
src/sim/features/session_intent/: __init__.py  service.py  types.py
src/sim/features/sessions/: service.py
src/sim/features/site_graph/: service.py  types.py
src/sim/features/users_state/: service.py
src/tests/: test_bootstrap_duckdb_events.py
(+9 files in other folders)
