[project]
name = "marketing-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.4",
    "numpy>=2.4.2",
    "pyyaml>=6.0.3",
    "simpy>=4.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", ".venv", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # handled by formatter
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
